--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fuzzing",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Tool set for fuzzing testing.",
   "repository": "https://github.com/usehotkey/fuzzing.git",
   "author": "Igor Golopolosov<igolopolosov@gmail.com>",
@@ -21,7 +21,7 @@
   },
   "ava": {
     "files": [
-      "lib/**/*.test.js"
+      "lib/**/*.spec.js"
     ]
   }
 }
