--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
   "scripts": {
     "test": "jest",
     "coverage": "jest --coverage",
-    "precommit": "npm run test"
+    "precommit": "npm test",
+    "prepush": "tsc --noEmit && npm test",
+    "start": "tsc --watch --noEmit"
   },
   "devDependencies": {
     "@types/jest": "^20.0.8",
-    "@types/node": "8.0.16",
+    "@types/node": "8.0.28",
     "jest": "^21.0.2",
     "ts-jest": "^21.0.0",
-    "tslint": "5.5.0",
-    "typescript": "2.4.2"
+    "tslint": "5.7.0",
+    "typescript": "2.5.2"
   },
   "jest": {
     "coverageReporters": [
