--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "fuzzing",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "Tool set for fuzzing testing.",
   "repository": "https://github.com/usehotkey/fuzzing.git",
   "author": "Igor Golopolosov<igolopolosov@gmail.com>",
   "license": "MIT",
   "scripts": {
     "test": "jest",
+    "lint": "tslint",
     "coverage": "jest --coverage",
     "precommit": "npm test",
-    "prepush": "tsc --noEmit && npm test",
+    "prepush": "tsc --noEmit & npm test",
     "start": "tsc --watch --noEmit"
   },
   "devDependencies": {
