--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fuzzing",
   "version": "0.10.0",
   "description": "Tool set for fuzz testing 🐰",
-  "repository": "https://github.com/usehotkey/fuzzing.git",
+  "repository": "https://github.com/palekh/fuzzing.git",
   "author": "Igor Golopolosov<igolopolosov@gmail.com>",
   "license": "MIT",
   "main": "./dist/index.js",
