ig - add possibility to fuzz with multiple arguments

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
       "src/**/*.{ts,tsx}"
     ],
     "transform": {
-      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(spec))\\.(tsx?)$",
     "moduleFileExtensions": [
