Add test steps into NPM publish

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,6 +14,10 @@ jobs:
       uses: actions/setup-node@master
       with:
         node-version: 14.x.x
+    - run: npm ci
+    - run: npm ci:lint
+    - run: npm ci:build
+    - run: npm ci:test
     - name: Publish if version has been updated
       uses: pascalgn/npm-publish-action@1.2.0
       with:
