Fix build actions

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,9 +15,9 @@ jobs:
       with:
         node-version: 14.x.x
     - run: npm ci
-    - run: npm ci:lint
-    - run: npm ci:build
-    - run: npm ci:test
+    - run: npm run ci:lint
+    - run: npm run ci:build
+    - run: npm run ci:test
     - name: Publish if version has been updated
       uses: pascalgn/npm-publish-action@1.2.0
       with:
