--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         tag_name: "v%s"
         tag_message: "v%s"
-        commit_pattern: "^Release (\\S+)"
+        commit_pattern: "^:bookmark: Release (\\S+)"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
