--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,11 +14,13 @@ jobs:
       uses: actions/setup-node@master
       with:
         node-version: 14.x.x
+
     - run: npm ci
     - run: npm run ci:lint
     - run: npm run ci:build
     - run: npm run ci:test
-    - run: npm login --registry=https://npm.pkg.github.com/
+    - run: npm login --registry=https://npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}
+
     - name: Publish if version has been updated
       uses: pascalgn/npm-publish-action@1.2.0
       with:
