--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fuzzing",
-  "version": "0.12.5",
+  "name": "@palekh/fuzzing",
+  "version": "0.12.6",
   "description": "Tool set for fuzz testing 🐰",
-  "repository": "https://github.com/palekh/fuzzing.git",
+  "repository": "git://github.com/palekh/fuzzing.git",
   "author": "Igor Golopolosov<igolopolosov@gmail.com>",
   "license": "MIT",
   "main": "./dist/index.js",
