--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@palekh/fuzzing",
-  "version": "0.12.8",
+  "name": "fuzzing",
+  "version": "0.12.9",
   "description": "Tool set for fuzz testing 🐰",
   "repository": "git://github.com/palekh/fuzzing.git",
   "author": "Igor Golopolosov<igolopolosov@gmail.com>",
