--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@master
     - uses: actions/setup-node@master
       with:
-        node-version: 14.x.
+        node-version: 14.x
     - run: npm ci
     - run: npm run ci:lint
     - run: npm run ci:build
