--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,18 +25,18 @@ jobs:
 
     - uses: actions/setup-node@v1
       with:
-        registry-url: 'https://npm.pkg.github.com'
-        scope: '@palekh'
-    - run: npm publish
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - uses: actions/setup-node@v1
-      with:
         node-version: 14.x
         registry-url: 'https://registry.npmjs.org'
     - run: npm install
-    - run: npm publish --access public
+    - run: npm publish
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
+    - uses: actions/setup-node@v1
+      with:
+        registry-url: 'https://npm.pkg.github.com'
+        scope: '@palekh'
+    - run: bash add-github-scope.sh
+    - run: npm publish
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
