--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -23,14 +23,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    # - uses: actions/setup-node@v1
-    #   with:
-    #     node-version: 14.x
-    #     registry-url: 'https://registry.npmjs.org'
-    # - run: npm install
-    # - run: npm publish
-    #   env:
-    #     NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 14.x
+    - run: npm install
+    - run: npm publish
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
     - uses: actions/setup-node@v1
       with:
