--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fuzzing",
-  "version": "0.12.17",
+  "version": "0.12.18",
   "description": "Tool set for fuzz testing 🐰",
-  "repository": "git://github.com/palekh/fuzzing.git",
+  "repository": "https://github.com/palekh/fuzzing.git",
   "author": "Igor Golopolosov<igolopolosov@gmail.com>",
   "license": "MIT",
   "main": "./dist/index.js",
