--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - uses: actions/setup-node@master
+    - uses: actions/setup-node@v1
       with:
         node-version: 14.x
     - run: npm ci
@@ -17,20 +17,11 @@ jobs:
     - run: npm run ci:build
     - run: npm run ci:test
 
-  build:
+  publish-github:
     runs-on: ubuntu-latest
     needs: test
     steps:
     - uses: actions/checkout@v2
-
-    - uses: actions/setup-node@v1
-      with:
-        node-version: 14.x
-    - run: npm install
-    - run: npm publish
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-
     - uses: actions/setup-node@v1
       with:
         registry-url: 'https://npm.pkg.github.com'
@@ -39,3 +30,16 @@ jobs:
     - run: npm publish
       env:
         NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  publish-npm:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 14.x
+    - run: npm install
+    - run: npm publish
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
